# token

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  deploy-aurora.sh  rust-toolchain.toml
abi/: ShitzuMigrate.abi
crates/tests/: Cargo.toml
crates/tests/tests/: token.rs
crates/tests/tests/aurora/: mod.rs
crates/tests/tests/util/: call.rs  event.rs  mod.rs  view.rs
crates/token/: Cargo.toml
crates/token-migrate/: Cargo.toml
crates/token-migrate/src/: main.rs
crates/token/src/: core.rs  lib.rs  storage.rs
res/: test_token.wasm  token.wasm  token_old.wasm
solidity/: foundry.toml  remappings.txt
solidity/src/: ShitzuMigrate.sol
