[workspace]
members = ["crates/tests", "crates/token"]
exclude = ["target/aurora-engine/etc/xcc-router"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
near-workspaces = { version = "0.9", default-features = false }
owo-colors = "4"
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }
primitive-types = "0.12"
serde = "1"
serde_json = "1"
tokio = "1"

[workspace.dependencies.near-contract-standards]
version = "=5.0.0-alpha.1"
# git = "https://github.com/near/near-sdk-rs.git"
# rev = "ee5cf867741d6d0d4db15857609b9e9268cc9b32"

[workspace.dependencies.near-sdk]
version = "=5.0.0-alpha.1"
# git = "https://github.com/near/near-sdk-rs.git"
# rev = "ee5cf867741d6d0d4db15857609b9e9268cc9b32"
default-features = false
features = ["unit-testing", "unstable"]

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }
