[package]
name = "chess-test"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dev-dependencies]
aurora-sdk-integration-tests = { path = "../aurora-sdk/aurora-rust-sdk/aurora-sdk-integration-tests" }
token = { path = "../token" }
anyhow.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
parity-secp256k1.workspace = true
primitive-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
